--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "babel-cli": "^6.24.1",
     "babel-runtime": "^6.23.0",
     "express": "^4.15.3",
+    "express-favicon": "^2.0.0",
     "lodash": "^4.17.4",
+    "method-override": "^2.3.9",
+    "path": "^0.12.7",
     "react": "^15.5.4",
     "react-dom": "^15.5.4"
   },
@@ -35,7 +38,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "dev": "nodemon --exec babel-node -- src/server.js | bunyan -o short",
+    "dev": "nodemon --exec babel-node -- server.js | bunyan -o short",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
